--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="bg-sky-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="error-modal"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
